--- a/infra-templates/windows/0/docker-compose.yml
+++ b/infra-templates/windows/0/docker-compose.yml
@@ -9,3 +9,5 @@ services:
         image: rancher/none
         labels:
             io.rancher.service.selector.container: experimental-windows-rancher
+			
+hello Tandan
