--- a/infra-templates/efs/0/rancher-compose.yml
+++ b/infra-templates/efs/0/rancher-compose.yml
@@ -26,4 +26,5 @@ efs-driver:
   storage_driver:
     name: rancher-efs
     scope: environment
-    volume_access_mode: multiHostRW
+    volume_access_m555ode: multiHostRW
+555
